changed db url to local

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -9,7 +9,7 @@ spring:
   application:
     name: ${APPLICATION_NAME:ignite-registration-service}
   datasource:
-    url: jdbc:mysql://ignite-db.cf3zfdqdzdpj.us-east-1.rds.amazonaws.com:3306/ignite_registration_db?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/ignite_registration_db?createDatabaseIfNotExist=true
     username: ${DB_USERNAME:db_instance_username}
     password: ${DB_PASSWORD:db_instance_password}
     driver-class-name: com.mysql.cj.jdbc.Driver
