--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,8 +1,6 @@
 ## servlet configuration
 server:
   port: ${PORT:5000}
-#  servlet:
-#    context-path: /ignite-registration-service
 
 ## application configuration
 spring:
@@ -22,21 +20,13 @@ spring:
 ## eureka server configuration
 eureka:
   instance:
-#    hostname: http://igniteregistration-env-1.eba-rggue2hh.us-east-1.elasticbeanstalk.com
       prefer-ip-address: true
   client:
     service-url:
       defaultZone: ${EUREKA_SERVER_URL:http://ignitediscovery-env.eba-77absjbd.us-east-1.elasticbeanstalk.com/eureka}
 
-## cors configuration
-accessControl:
-  allowedOrigins: ${ALLOWED_ORIGINS:*}
-  allowedMethods: ${ALLOWED_METHODS:GET, POST, PUT, PATCH, DELETE, OPTIONS}
-  maxAge: ${MAX_AGE:3600}
-  allowedHeaders: ${ALLOWED_HEADERS:*}
-
 ## Payment-Microservice
 payment:
-  baseUrl: ${PAYMENT_BASE_URL:api_gateway_address/ignite-payment-service}
+  baseUrl: ${PAYMENT_BASE_URL:http://ignitepayment-env.eba-ng4vfm36.us-east-1.elasticbeanstalk.com}
   deleteByTuitionIdUrl: /api/v1/payment/delete/all/tuition/{tuitionId}
   deleteByStudentIdUrl: /api/v1/payment/delete/all/student/{studentId}
