--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,6 @@
 ## servlet configuration
 server:
   port: ${PORT:8082}
-#  servlet:
-#    context-path: /ignite-registration-service
 
 ## application configuration
 spring:
@@ -30,15 +28,8 @@ eureka:
     service-url:
       defaultZone: ${EUREKA_SERVER_URL:http://localhost:8761/eureka}
 
-## cors configuration
-accessControl:
-  allowedOrigins: ${ALLOWED_ORIGINS:*}
-  allowedMethods: ${ALLOWED_METHODS:GET, POST, PUT, PATCH, DELETE, OPTIONS}
-  maxAge: ${MAX_AGE:3600}
-  allowedHeaders: ${ALLOWED_HEADERS:*}
-
 ## Payment-Microservice
 payment:
-  baseUrl: ${PAYMENT_BASE_URL:http://localhost:8081/ignite-payment-service}
+  baseUrl: ${PAYMENT_BASE_URL:http://localhost:8083}
   deleteByTuitionIdUrl: /api/v1/payment/delete/all/tuition/{tuitionId}
   deleteByStudentIdUrl: /api/v1/payment/delete/all/student/{studentId}
