--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Registration Microservice for Ignite Project Backend</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<sonar.organization>ignite-swivel</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
 		<start-class>com.swivel.ignite.registration.RegistrationApplication</start-class>
 	</properties>
@@ -77,6 +79,11 @@
 							</goals>
 						</execution>
 					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.sonarsource.scanner.maven</groupId>
+					<artifactId>sonar-maven-plugin</artifactId>
+					<version>3.9.1.2184</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
